# simplestaff

./: .gitattributes  Dockerfile  build-images.sh  docker-compose.yml
DevDocu/: Handbuch_Manager.md  Handbuch_Mitarbeiter.md  Nethserver8_Deployment.md  SimpleStaff_A4_Flyer.html  SimpleStaff_B2B_Flyer.html  SimpleStaff_Einfacher_Flyer.html  SimpleStaff_Marketing_Kit.md  SimpleStaff_Presentation.pptx  implementation_scaffolding.md  implementierungs_status.md
backend/: .env.example  .gitignore  Cargo.toml  Dockerfile
backend/migration/: Cargo.toml
backend/migration/src/: lib.rs  m001_create_tenants.rs  m002_create_users.rs  m003_create_shift_types.rs  m004_create_employees.rs  m005_create_blocked_days.rs  m006_create_vacations.rs  m007_create_shift_assignments.rs  m008_enable_rls.rs  m009_add_valid_days_to_shift_types.rs  m010_add_min_max_staff_to_shift_types.rs  m011_create_closed_days.rs  m012_add_holiday_mode_to_shift_types.rs  m013_create_shift_swaps.rs
backend/src/: config.rs  errors.rs  main.rs
backend/src/handlers/: admin.rs  assignments.rs  auth.rs  blocked_days.rs  calendar.rs  closed_days.rs  employees.rs  mod.rs  shift_swaps.rs  shift_types.rs  tenants.rs  vacations.rs  validation.rs
backend/src/middleware/: auth.rs  tenant.rs
backend/src/models/: closed_day.rs  employee.rs  employee_blocked_day.rs  employee_vacation.rs  mod.rs  shift_assignment.rs  shift_swap.rs  shift_type.rs  tenant.rs  user.rs
backend/src/services/: assignment_service.rs  calendar_service.rs  mod.rs  scheduler_service.rs  validation_service.rs
frontend/: Dockerfile  (+3 more)
(+51 files in other folders)
